# root-check

./: .editorconfig  .gitignore  LICENSE  README.md  build.gradle.kts  settings.gradle.kts  settings_OLD.gradle.kts
.github/workflows/: build-debug.yml  ci.yml  release.yml
.trae/specs/root-detection-phase2/: checklist.md  spec.md  tasks.md
.trae/specs/root-env-detection/: checklist.md  spec.md  tasks.md
.trae/specs/root-isolation-top-tier/: checklist.md  spec.md  tasks.md
apex-root/: .gitignore  CODE_REVIEW.md  apex-release.jks  build.gradle.kts  gradle.properties  settings.gradle.kts
apex-root/.detekt/: config.yaml
apex-root/app/: build.gradle.kts  proguard-rules.pro
apex-root/baseline/: baseline_dump.cpp
apex-root/bpf/: apex_firewall.bpf.c  apex_firewall.h
apex-root/ctrl/: apex_firewall_ctrl.cpp  apex_firewall_ctrl.h  apex_mem_spoof.c  apex_pmu_spoof.c  apex_runtime_engine.cpp  apex_self_hide.cpp  apex_timing_spoof.c
apex-root/docs/: KNOWLEDGE_GRAPH.md  UI_REFACTOR_SPEC.md
apex-root/jni/: native_bridge.cpp
apex-root/legacy/: apex_legacy_ctrl.cpp  apex_legacy_ctrl.h  libapex_hook.c
apex-root/module/: customize.sh  module.prop  post-fs-data.sh  service.sh  uninstall.sh  update.json
apex-root/scripts/: build_bpf.sh  build_liboqs_android.ps1  build_liboqs_android.sh  build_module.ps1  build_module.sh
apex-root/sepolicy/: apex_firewall.te  sepolicy.rule
apex-root/tools/: generate_root_keys.cpp  sign_rule_package.cpp
apex-root/ui/: HideModeManager.kt  ModeSwitchActivity.kt  activity_mode_switch.xml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/jni/: CMakeLists.txt  native-lib.cpp
app_rootdetector_OLD/: build.gradle.kts  proguard-rules.pro
app_rootdetector_OLD/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
app_rootdetector_OLD/src/main/cpp/cpp/: cloud_sync.c  cloud_sync.h  hardware_id.h
app_rootdetector_OLD/src/main/cpp/cpp/bare_syscall/: bare_syscall.h  cpu_control.c  cpu_control.h  interrupt_raw.c  interrupt_raw.h  memory_raw.c  memory_raw.h  page_table_walker.c  page_table_walker.h  pmu_counter.c  pmu_counter.h  raw_file_io.c  raw_file_io.h  syscall_arm32.S  syscall_arm64.S  syscall_arm64.h
app_rootdetector_OLD/src/main/cpp/cpp/core/obfuscation/: obfuscation_core.h
app_rootdetector_OLD/src/main/cpp/cpp/crypto/core/: aes_gcm.c  blake2.c  blake2.h  crypto_basic.c  crypto_core.h  sha3.c  xchacha20.c  xchacha20.h
app_rootdetector_OLD/src/main/cpp/cpp/ipc/: ipc.h  ipc_protocol.h
app_rootdetector_OLD/src/main/cpp/cpp/ipc/client/: unix_socket_client.c
app_rootdetector_OLD/src/main/cpp/cpp/ipc/core/: ipc_crypto.c  ipc_protocol.c
app_rootdetector_OLD/src/main/cpp/cpp/ipc/server/: unix_socket_server.c
app_rootdetector_OLD/src/main/cpp/cpp/jni/: jni_bridge.cpp
app_rootdetector_OLD/src/main/cpp/cpp/sandbox_microkernel/: micro_kernel.c  micro_kernel.h  plugin_interface.h  plugin_standard.h  sandbox_main.c
app_rootdetector_OLD/src/main/cpp/cpp/sandbox_microkernel/plugins/l1_property/: plugin_l1.c
app_rootdetector_OLD/src/main/cpp/cpp/sandbox_microkernel/plugins/l2_art/: plugin_l2.c
app_rootdetector_OLD/src/main/cpp/cpp/sandbox_microkernel/plugins/l3_memory/: plugin_l3.c
app_rootdetector_OLD/src/main/cpp/cpp/sandbox_microkernel/plugins/l4_mount/: plugin_l4.c
app_rootdetector_OLD/src/main/cpp/cpp/sandbox_microkernel/plugins/l5_sidechannel/: plugin_l5.c
app_rootdetector_OLD/src/main/cpp/cpp/sandbox_microkernel/plugins/l6_kernel/: plugin_l6.c
app_rootdetector_OLD/src/main/cpp/cpp/sandbox_microkernel/plugins/l7_tee/: plugin_l7.c
app_rootdetector_OLD/src/main/cpp/cpp/sandbox_microkernel/plugins/l8_pmu_sidechannel/: plugin_l8.c
app_rootdetector_OLD/src/main/cpp/cpp/sandbox_microkernel/plugins/specialized/: layer10_apatch.c  layer11_lsposed.c  layer12_shamiko.c  layer8_magisk.c  layer9_ksu.c
app_rootdetector_OLD/src/main/cpp/cpp/sandbox_microkernel/rule_parser/: custom_template.c  custom_template.h  rule_parser.c  rule_parser.h
app_rootdetector_OLD/src/main/cpp/cpp/trusted_daemon/: anti_debug.c  anti_debug.h  anti_hook.c  anti_hook.h  daemon_main.c  dir_isolation.c  dir_isolation.h  instruction_obfuscator.c  instruction_obfuscator.h  kernel_probe.c  kernel_probe.h  log_center.c  log_center.h  memory_checker.c  memory_checker.h  random_layout.c  random_layout.h  self_verify.c  self_verify.h  sign_center.c  sign_center.h  triple_arbiter.c  triple_arbiter.h
app_rootdetector_OLD/src/main/cpp/crypto/core/: aes_gcm.h  sha3.c  sha3.h
app_rootdetector_OLD/src/main/cpp/detector/: apatch_detector.cpp  apatch_detector.h  apatch_kpm_detector.cpp  apatch_kpm_detector.h  art_detector.cpp  art_detector.h  binder_latency_detector.cpp  binder_latency_detector.h  cache_timing_detector.cpp  cache_timing_detector.h  cloud_sync.cpp  cloud_sync.h  cpu_baseline_db.cpp  cpu_baseline_db.h  fd_leak_detector.cpp  fd_leak_detector.h  file_detector.cpp  file_detector.h  firmware_detector.cpp  firmware_detector.h  hardware_id.cpp  hardware_id.h  interrupt_timing_detector.cpp  interrupt_timing_detector.h  kernel_detector.cpp  kernel_detector.h  kernel_module_detector.cpp  kernel_module_detector.h  kernelsu_overlay_detector.cpp  kernelsu_overlay_detector.h  lsposed_detector.cpp  lsposed_detector.h  memory_detector.cpp  memory_detector.h  memory_fingerprint_detector.cpp  memory_fingerprint_detector.h  mount_detector.cpp  mount_detector.h  pagefault_monitor.cpp  pagefault_monitor.h  (+26 more)
app_rootdetector_OLD/src/main/cpp/ipc/client/: unix_socket_client.h
app_rootdetector_OLD/src/main/cpp/ipc/core/: ipc_crypto.h  ipc_protocol.c  ipc_protocol.h
app_rootdetector_OLD/src/main/cpp/ipc/server/: unix_socket_server.c  unix_socket_server.h
app_rootdetector_OLD/src/main/cpp/sandbox_microkernel/plugins/: plugin_interface.h
app_rootdetector_OLD/src/main/cpp/utils/: syscall_utils.cpp  syscall_utils.h
app_rootdetector_OLD/src/main/cpp/verification/: apatch_sidechannel.c  direct_syscall.c  namespace_check.c
docs/: ARCHITECTURE.md  BUILD.md  BUILD_ENV.md  DEVELOPMENT.md  KNOWLEDGE_GRAPH.md  PROGRESS_LOG.md  TROUBLESHOOTING.md  UI_REFACTOR_SPEC.md
(+341 files in other folders)
